@@ -1,62 +1,79 @@
 package ua.com.fielden.platform.migration;
 
-import static java.util.Collections.unmodifiableList;
-import static java.util.stream.Collectors.toList;
-import static ua.com.fielden.platform.entity.AbstractEntity.ID;
-import static ua.com.fielden.platform.entity.AbstractEntity.KEY;
-import static ua.com.fielden.platform.entity.AbstractEntity.VERSION;
-import static ua.com.fielden.platform.eql.meta.EntityTypeInfo.getEntityTypeInfo;
-import static ua.com.fielden.platform.utils.CollectionUtil.setOf;
-import static ua.com.fielden.platform.utils.CollectionUtil.unmodifiableListOf;
-import static ua.com.fielden.platform.utils.EntityUtils.isPersistedEntityType;
-import static ua.com.fielden.platform.utils.EntityUtils.isUnionEntityType;
-
-import java.util.ArrayList;
-import java.util.Collection;
-import java.util.HashSet;
-import java.util.LinkedHashMap;
-import java.util.List;
-import java.util.Map;
-import java.util.Map.Entry;
-import java.util.Objects;
-import java.util.Set;
-import java.util.TreeSet;
-
 import ua.com.fielden.platform.entity.AbstractEntity;
-import ua.com.fielden.platform.eql.meta.EqlPropertyMetadata;
-import ua.com.fielden.platform.reflection.EntityMetadata;
+import ua.com.fielden.platform.meta.EntityMetadata;
+import ua.com.fielden.platform.meta.IDomainMetadata;
+import ua.com.fielden.platform.meta.PropertyMetadata;
 import ua.com.fielden.platform.types.markers.IUtcDateTimeType;
 import ua.com.fielden.platform.types.tuples.T2;
 import ua.com.fielden.platform.utils.EntityUtils;
 
+import java.util.*;
+import java.util.Map.Entry;
+import java.util.stream.Stream;
+
+import static java.util.Collections.unmodifiableList;
+import static java.util.stream.Collectors.toList;
+import static ua.com.fielden.platform.entity.AbstractEntity.*;
+import static ua.com.fielden.platform.eql.meta.EntityTypeInfo.getEntityTypeInfo;
+import static ua.com.fielden.platform.meta.PropertyMetadataKeys.REQUIRED;
+import static ua.com.fielden.platform.reflection.EntityMetadata.keyTypeInfo;
+import static ua.com.fielden.platform.utils.CollectionUtil.setOf;
+import static ua.com.fielden.platform.utils.EntityUtils.isPersistentEntityType;
+
+// TODO This class uses both typeful metadata and reflection + EntityTypeInfo. The latter should be replaced.
 public class MigrationUtils {
     private static final Set<String> PROPS_TO_IGNORE = setOf(ID, VERSION);
 
-    public static final EntityMd generateEntityMd(final String tableName, final Collection<EqlPropertyMetadata> propsMetadatas) {
-        final var props = new ArrayList<PropMd>();
-        for (final EqlPropertyMetadata el : propsMetadatas) {
-            if (el.column != null && !PROPS_TO_IGNORE.contains(el.name)) {
-                props.add(new PropMd(el.name, el.javaType, el.column.name, el.required,
-                        el.hibType instanceof IUtcDateTimeType,
-                        isPersistedEntityType(el.javaType)
-                                ? keyPaths(el.name, (Class<? extends AbstractEntity<?>>) el.javaType)
-                                : unmodifiableListOf(el.name)));
-            } else if (!el.subitems.isEmpty()) {
-                for (final EqlPropertyMetadata subitem : el.subitems) {
-                    if (subitem.expressionModel == null) {
-                        props.add(new PropMd(el.name + "." + subitem.name, subitem.javaType, subitem.column.name, isUnionEntityType(el.javaType) ? false : el.required,
-                                subitem.hibType instanceof IUtcDateTimeType,
-                                isPersistedEntityType(subitem.javaType)
-                                        ? keyPaths(el.name + "." + subitem.name, (Class<? extends AbstractEntity<?>>) subitem.javaType)
-                                        : unmodifiableListOf(el.name + "." + subitem.name)));
+    public static EntityMd generateEntityMd(final String tableName, final Collection<PropertyMetadata> pms,
+                                            final IDomainMetadata domainMetadata) {
+        final var pmUtils = domainMetadata.propertyMetadataUtils();
+        final var propMds = pms.stream()
+                .filter(pm -> !pm.type().isCollectional())
+                .flatMap(pm -> switch (pm) {
+                    case PropertyMetadata.Persistent ppm when !PROPS_TO_IGNORE.contains(ppm.name()) -> {
+                        final var leafs = pmUtils.isPropEntityType(ppm, EntityMetadata::isPersistent)
+                                ? keyPaths(ppm, domainMetadata)
+                                : List.of(pm.name());
+                        yield Stream.of(new PropMd(ppm.name(), (Class<?>) ppm.type().javaType(), ppm.data().column().name,
+                                                   ppm.is(REQUIRED), pm.hibType() instanceof IUtcDateTimeType, leafs));
                     }
-                }
-            }
+                    default -> {
+                        final boolean required = !pmUtils.isPropEntityType(pm, EntityMetadata::isUnion) && pm.is(REQUIRED);
+                        yield pmUtils.subProperties(pm).stream()
+                                .map(PropertyMetadata::asPersistent).flatMap(Optional::stream)
+                                .map(spm -> {
+                                    final var leafs = pmUtils.isPropEntityType(spm, EntityMetadata::isPersistent)
+                                            ? keyPaths(spm, domainMetadata).stream().map(s -> pm.name() + "." + s).toList()
+                                            : List.of(pm.name() + "." + spm.name());
+                                    return new PropMd(pm.name() + "." + spm.name(), (Class<?>) spm.type().javaType(),
+                                                      spm.data().column().name, required,
+                                                      spm.hibType() instanceof IUtcDateTimeType, leafs);
+                                });
+                    }
+                }).toList();
 
-        }
-        return new EntityMd(tableName, unmodifiableList(props));
+        return new EntityMd(tableName, propMds);
     }
 
+    public static List<String> keyPaths(final PropertyMetadata pm, final IDomainMetadata domainMetadata) {
+        return pm.type().asEntity().map(et -> {
+            final var keyMembers = domainMetadata.entityMetadataUtils().keyMembers(domainMetadata.forEntity(et.javaType()));
+            if (keyMembers.isEmpty()) {
+                return List.of(pm.name());
+            } else {
+                return keyMembers.stream().flatMap(km -> {
+                    if (domainMetadata.propertyMetadataUtils().isPropEntityType(km, EntityMetadata::isPersistent)) {
+                        return keyPaths(km, domainMetadata).stream();
+                    } else {
+                        return Stream.of(km.name());
+                    }
+                }).map(s -> pm.name() + "." + s).toList();
+            }
+        }).orElseGet(List::of);
+    }
+
+    // TODO migrate to typeful metadata
     public static <ET extends AbstractEntity<?>> List<String> keyPaths(final String propName, final Class<ET> et) {
         final List<String> result = new ArrayList<>();
         final List<T2<String, Class<?>>> keyMembers = getEntityTypeInfo(et).compositeKeyMembers;
@@ -64,7 +81,7 @@ public class MigrationUtils {
             result.add(propName);
         } else {
             for (final T2<String, Class<?>> keyMember : keyMembers) {
-                if (!EntityUtils.isPersistedEntityType(keyMember._2)) {
+                if (!isPersistentEntityType(keyMember._2)) {
                     result.add(propName + "." + keyMember._1);
                 } else {
                     result.addAll(keyPaths(propName + "." + keyMember._1, (Class<? extends AbstractEntity<?>>) keyMember._2));
@@ -74,18 +91,39 @@ public class MigrationUtils {
         return unmodifiableList(result);
     }
 
+    public static List<String> keyPaths(final Class<? extends AbstractEntity<?>> entityType, final IDomainMetadata domainMetadata) {
+        final EntityMetadata em = domainMetadata.forEntity(entityType);
+        final var keyMembers = domainMetadata.entityMetadataUtils().keyMembers(em);
+        if (keyMembers.isEmpty()) {
+            if (EntityUtils.isOneToOne(entityType)) {
+                return keyPaths(em.property(KEY), domainMetadata);
+            } else {
+                return List.of(KEY);
+            }
+        } else {
+            return keyMembers.stream().flatMap(km -> {
+                if (domainMetadata.propertyMetadataUtils().isPropEntityType(km, EntityMetadata::isPersistent)) {
+                    return keyPaths(km, domainMetadata).stream();
+                } else {
+                    return Stream.of(km.name());
+                }
+            }).toList();
+        }
+    }
+
+    // TODO migrate to typeful metadata
     public static <ET extends AbstractEntity<?>> List<String> keyPaths(final Class<ET> et) {
         final var result = new ArrayList<String>();
         final var keyMembers = getEntityTypeInfo(et).compositeKeyMembers;
         if (keyMembers.isEmpty()) {
             if (EntityUtils.isOneToOne(et)) {
-                result.addAll(keyPaths(KEY, (Class<ET>) EntityMetadata.keyTypeInfo(et)));
+                result.addAll(keyPaths(KEY, (Class<ET>) keyTypeInfo(et)));
             } else {
                 result.add(KEY);
             }
         } else {
             for (final T2<String, Class<?>> keyMember : keyMembers) {
-                if (!EntityUtils.isPersistedEntityType(keyMember._2)) {
+                if (!isPersistentEntityType(keyMember._2)) {
                     result.add(keyMember._1);
                 } else {
                     result.addAll(keyPaths(keyMember._1, (Class<? extends AbstractEntity<?>>) keyMember._2));
@@ -106,7 +144,7 @@ public class MigrationUtils {
             final long countOfNullValuedIndices = indices.values().stream().filter(Objects::isNull).count();
             if (countOfNullValuedIndices > 0 && countOfNullValuedIndices != indices.size()) {
                 throw new DataMigrationException("Mapping for prop [" + propMd.name() + "] does not have all its members specified: " + indices.entrySet().stream().filter(entry -> entry.getValue() == null).map(Entry::getKey).collect(toList()));
-            } else if (!indices.values().contains(null)) {
+            } else if (!indices.containsValue(null)) {
                 result.add(new PropInfo(propMd.name(), propMd.type(), propMd.column(), propMd.utcType(), new ArrayList<>(indices.values())));
                 usedPaths.addAll(propMd.leafProps());
             } else if (propMd.required() && !updater) {
@@ -142,14 +180,14 @@ public class MigrationUtils {
     }
 
     public static Object transformValue(final Class<?> type, final List<Object> values, final IdCache cache) {
-        if (!isPersistedEntityType(type)) {
-            return values.get(0);
+        if (!isPersistentEntityType(type)) {
+            return values.getFirst();
         } else {
             final Map<Object, Long> cacheForType = cache.getCacheForType((Class<? extends AbstractEntity<?>>) type);
-            final Object entityKeyObject = values.size() == 1 ? values.get(0) : values;
+            final Object entityKeyObject = values.size() == 1 ? values.getFirst() : values;
             final Long result = cacheForType.get(entityKeyObject);
-            if (values.size() == 1 && values.get(0) != null && result == null) {
-                System.out.println("           !!! can't find id for " + type.getSimpleName() + " with key: [" + values.get(0) + "]");
+            if (values.size() == 1 && values.getFirst() != null && result == null) {
+                System.out.println("           !!! can't find id for " + type.getSimpleName() + " with key: [" + values.getFirst() + "]");
             }
             if (values.size() > 1 && !containsOnlyNull(values) && result == null) {
                 System.out.println("           !!! can't find id for " + type.getSimpleName() + " with key: " + values);
